--- a/templates/chat/skill-dialog.html
+++ b/templates/chat/skill-dialog.html
@@ -1,5 +1,9 @@
 <form class="skill-test">
   <div class="form-group">
+    <label>Skill ID</label>
+    <input readonly type="text" name="skillid" value="{{skillid}}" />
+  </div>
+  <div class="form-group">
     <label>{{localize "RQG.Skillname"}}</label>
     <input readonly type="text" name="skillname" value="{{skillname}}" />
   </div>
