--- a/templates/actor/parts/actor-magic.html
+++ b/templates/actor/parts/actor-magic.html
@@ -76,11 +76,15 @@
         </thead>
         <tbody>
         {{#each data.mpstorage as |storage id|}}
-            <tr style="height: 28px;">
+            <tr class="item" data-item-id="{{storage._id}}" style="height: 28px;">
             <td style="width: 25%; height: 28px; text-align: center;">{{localize storage.name}}</td>
-            <td style="width: 15%; height: 28px; text-align: center;"><input id="{{id}}_{{storage._id}}_currentmp_mpstorage" type="text" name="storage.data.currentmp" value="{{storage.data.currentmp}}"/></td>
-            <td style="width: 15%; height: 28px; text-align: center;">{{storage.data.maxmp}}</td>
-            <td style="width: 10%; text-align: center;">{{storage.data.equiped}}</td>
+            <td style="width: 15%; height: 28px; text-align: center;"><input class="mpstorage-current" id="{{id}}_{{storage._id}}_currentmp_mpstorage" type="text" name="data.currentmp" value="{{storage.data.data.currentmp}}"/></td>
+            <td style="width: 15%; height: 28px; text-align: center;">{{storage.data.data.maxmp}}</td>
+            <td style="width: 10%; text-align: center;"><input class="mpstorage-equiped" id="{{id}}_{{storage._id}}_mpstorage_equiped" type="checkbox" name="data.equiped" {{checked storage.data.data.equiped}}/></td>
+            <td>
+                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>                
+            </td>
             </tr>        
         {{/each}}
         </tbody>
