--- a/templates/actor/parts/actor-summary.html
+++ b/templates/actor/parts/actor-summary.html
@@ -1,8 +1,3 @@
-<div class="summary-row flexrow">
-    <button class="attack-roll runequest-roll-button">
-        Attack
-    </button>
-</div>
 {{!-- Hitlocations and Runes row --}}
 <div class="summary-row flexrow">
     <div class="summary-hitlocations-list">
@@ -16,14 +11,19 @@
             <th style="width: 10%; text-align: center;">{{localize "RQG.WOUNDS"}}</th>
         </thead>
         <tbody>
+        {{!-- General Wounds Management--}}
+        <tr style="height: 28px;" class="item">
+            <td style="width: 25%; height: 28px; text-align: center;" colspan="5">{{localize "RQG.GENERALWOUNDS"}}</td>
+            <td style="width: 10%; text-align: center;" colspan="1"><input class="attribute-value" type="text" name="data.attributes.generalwounds" value="{{actor.data.data.attributes.generalwounds}}" data-dtype="Number"/></td>
+        </tr>                  
         {{#each data.hitlocations as |hl id|}}
             <tr style="height: 28px;" class="item" data-itemid="{{hl._id}}">
-            <td style="width: 25%; height: 28px; text-align: center;">{{localize hl.name}}</td>
-            <td style="width: 15%; height: 28px; text-align: center;">{{hl.data.data.rangestart}}-{{hl.data.data.rangeend}}</td>
-            <td style="width: 15%; height: 28px; text-align: center;"><input id="{{hl._id}}_currenthp" type="text" name="data.currenthp" value="{{hl.data.data.currenthp}}"/></td>
-            <td style="width: 15%; height: 28px; text-align: center;">{{hl.data.data.maxhp}}</td>
-            <td style="width: 10%; height: 28px; text-align: center;"><input id="{{hl._id}}_armor" class="attribute-value hitloc-armor"  type="text"  name="data.armor"  value="{{hl.data.data.armor}}"  data-dtype="Number"  /></td>
-            <td style="width: 10%; text-align: center;"><input id="{{hl._id}}_wounds" class="attribute-value hitloc-wounds"  type="text"  name="data.wounds"  value="{{hl.data.data.wounds}}"  data-dtype="Number"  /></td>
+                <td style="width: 25%; height: 28px; text-align: center;">{{localize hl.name}}</td>
+                <td style="width: 15%; height: 28px; text-align: center;">{{hl.data.data.rangestart}}-{{hl.data.data.rangeend}}</td>
+                <td style="width: 15%; height: 28px; text-align: center;"><input id="{{hl._id}}_currenthp" type="text" name="data.currenthp" value="{{hl.data.data.currenthp}}"/></td>
+                <td style="width: 15%; height: 28px; text-align: center;">{{hl.data.data.maxhp}}</td>
+                <td style="width: 10%; height: 28px; text-align: center;"><input id="{{hl._id}}_armor" class="attribute-value hitloc-armor"  type="text"  name="data.armor"  value="{{hl.data.data.armor}}"  data-dtype="Number"  /></td>
+                <td style="width: 10%; text-align: center;"><input id="{{hl._id}}_wounds" class="attribute-value hitloc-wounds"  type="text"  name="data.wounds"  value="{{hl.data.data.wounds}}"  data-dtype="Number"  /></td>
             </tr>        
         {{/each}}
         </tbody>
@@ -37,9 +37,8 @@
             </thead>
             <tbody>
                 {{#each data.elementalrunes as |elementalrune id|}}
-                    <tr data-rune="{{id}}">
-                        <td colspan="2"><a class="elementalrunes-roll rollable">{{localize elementalrune.label}}: {{elementalrune.value}}</a></td>
-                        <td></td>
+                    <tr class="elemental-rune" data-rune="{{id}}">
+                        <td class="elemental-rune" colspan="2"><a class="elementalrunes-roll rollable">{{localize elementalrune.label}}: {{elementalrune.value}}</a></td>
                     </tr>
                 {{/each}}
                 {{#each data.powerrunes as |powerrunepair pairid|}}
@@ -54,87 +53,83 @@
     </div>
 </div>
 <div class="summary-row flexrow">
-    <div class="summary-column flexcolumn">
+    <div class="summary-runes-list flexrow">
         <ol class="skills-list">
-            <ol class="summary-passions-list">
-                <li class="item item-header">
-                    <div class="item-name">{{localize "RQG.Passions"}}</div>
-                    <div class="item-controls">
-                        <a class="item-control item-create" title="Create item" data-type="passion"><i class="fas fa-plus"></i></a>
-                    </div>
-                </li>
-                {{#each data.passions as |passion id|}}
-                <li class="item flexrow" data-item-id="{{passion._id}}" data-passionname="{{passion.name}}">
-                    <h4 class="item-name"><a class="passion-roll">{{passion.name}}</a></h4>
-                    <h4 class="item-name"><a class="passion-roll">{{passion.data.data.total}}</a></h4>
-                    <div class="item-controls">
-                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                    </div>
-                </li>
-                {{/each}}
-            </ol>
-
-            <ol class="summary-meleeattack-list" data-attacktype="melee">
-                <li class="item item-header">
-                    <div class="item-name flexrow">{{localize "RQG.MeleeAttacks"}}</div>
-                    <div class="item-controls">
-                        <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
-                    </div>                    
-                </li>
-                {{#each data.attacks.melee as |attack id|}}
-                    <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                        <span class="summary-attack-label"><a class="attack-roll">{{attack.name}}</a></span>
-                        <span class="summary-attack-value">{{attack.data.data.skillvalue}}</span>
-                        <span class="summary-attack-damage">{{attack.data.data.damage}}</span>
-                        <div class="item-controls">
+            <table data-attacktype="melee">
+                <thead>
+                    <th>{{localize "RQG.Passions"}}</th>
+                    <th><a class="item-control item-create" title="Create item" data-type="passion"><i class="fas fa-plus"></i></a></th>
+                </thead>
+                <tbody>
+                    {{#each data.passions as |passion id|}}
+                    <tr class="item flexrow" data-item-id="{{passion._id}}" data-passionname="{{passion.name}}">
+                        <td class="summary-attack-label"  colspan="5"><a class="passion-roll">{{passion.name}}</a></td>
+                        <td class="summary-attack-value" colspan="1"><a class="passion-roll">{{passion.data.data.total}}</a></td>
+                        <td class="item-controls" colspan="2">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                        </div>                        
-                    </li>
-                {{/each}}
-            </ol>
-            <ol class="summary-missileattack-list" data-attacktype="missile">
-                <li class="item item-header">
-                    <div class="item-name flexrow">{{localize "RQG.MissileAttacks"}}</div>
-                    <div class="item-controls">
-                        <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
-                    </div>                    
-                </li>
-                {{#each data.attacks.missile as |attack id|}}
-                    <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="missileweapons">
-                        <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
-                        <label class="skill-value">{{attack.data.data.skillvalue}}</label>
-                        <h4 class="item-name">{{attack.data.data.damage}}</h4>
-                        <div class="item-controls">
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                        </div>                           
-                    </li>
-                {{/each}}
-            </ol>
-            <ol class="summary-naturalattack-list" data-attacktype="natural">
-                <li class="item item-header">
-                    <div class="item-name flexrow">{{localize "RQG.NaturalAttacks"}}</div>
-                    <div class="item-controls">
-                        <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
-                    </div>                    
-                </li>
-                {{#each data.attacks.natural as |attack id|}}
-                    <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="naturalweapons">
-                        <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
-                        <label class="skill-value">{{attack.data.data.skillvalue}}</label>
-                        <h4 class="item-name">{{attack.data.data.damage}}</h4>
-                        <div class="item-controls">
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                        </div>                           
-                    </li>
-                {{/each}}
-            </ol>            
+                        </td>                        
+                    </tr>                
+                    {{/each}}
+                </tbody>
+                </table>
         </ol>        
     </div>
-    <div class="summary-column flexcolumn">
+    <div class="summary-runes-list flexrow">
+        <ol class="skills-list">
+            <table data-attacktype="melee">
+                    <thead>
+                        <th>{{localize "RQG.Attack"}}</th>
+                        <th><a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a></th>
+                    </thead>
+                    <tbody>
+                        <tr class="attack-type-name">
+                            <td class="attack-type-name" colspan="10">{{localize "RQG.MeleeAttacks"}}</td>                  
+                        </tr>
+                        {{#each data.attacks.melee as |attack id|}}
+                            <tr class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
+                                <td class="summary-attack-label"  colspan="4"><a class="attack-roll">{{attack.name}}</a></td>
+                                <td class="summary-attack-value" colspan="1">{{attack.data.data.skillvalue}}</td>
+                                <td class="summary-attack-damage" colspan="3">{{attack.data.data.damage}}</td>
+                                <td class="item-controls" colspan="2">
+                                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                                </td>                        
+                            </tr>
+                        {{/each}}
+                        <tr class="attack-type-name">
+                            <th class="attack-type-name" colspan="10">{{localize "RQG.MissileAttacks"}}</th>                  
+                        </tr>
+                        {{#each data.attacks.missile as |attack id|}}
+                            <tr class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
+                                <td class="summary-attack-label"  colspan="4"><a class="attack-roll">{{attack.name}}</a></td>
+                                <td class="summary-attack-value" colspan="1">{{attack.data.data.skillvalue}}</td>
+                                <td class="summary-attack-damage" colspan="3">{{attack.data.data.damage}}</td>
+                                <td class="item-controls" colspan="2">
+                                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                                </td>                        
+                            </tr>
+                        {{/each}}                         
+                        <tr class="attack-type-name">
+                            <th class="attack-type-name" colspan="10">{{localize "RQG.NaturalAttacks"}}</th>                  
+                        </tr>
+                        {{#each data.attacks.natural as |attack id|}}
+                            <tr class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
+                                <td class="summary-attack-label"  colspan="4"><a class="attack-roll">{{attack.name}}</a></td>
+                                <td class="summary-attack-value" colspan="1">{{attack.data.data.skillvalue}}</td>
+                                <td class="summary-attack-damage" colspan="3">{{attack.data.data.damage}}</td>
+                                <td class="item-controls" colspan="2">
+                                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                                </td>                        
+                            </tr>
+                        {{/each}}                         
+                    </tbody>
+            </table>   
+        </ol>
+    </div>   
+    <div class="summary-runes-list flexrow">
         <div class="skills-list">
             {{!-- Defense --}}
             <table>
