--- a/templates/actor/parts/actor-summary.html
+++ b/templates/actor/parts/actor-summary.html
@@ -63,8 +63,9 @@
                 <tbody>
                     {{#each data.passions as |passion id|}}
                     <tr class="item flexrow" data-item-id="{{passion._id}}" data-passionname="{{passion.name}}">
-                        <td class="summary-attack-label"  colspan="5"><a class="passion-roll">{{passion.name}}</a></td>
-                        <td class="summary-attack-value" colspan="1"><a class="passion-roll">{{passion.data.data.total}}</a></td>
+                        <td class="summary-attack-label"  colspan="5"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.name}}</a></td>
+                        <td class="summary-attack-value" colspan="1"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.data.data.total}}</a></td>
+                        <td class="item" data-itemid="{{passion._id}}"><input class="passion-experience" id="{{id}}_{{passion._id}}_passion_skill" type="checkbox" name="data.experience" {{checked passion.data.data.experience}}/></td>                         
                         <td class="item-controls" colspan="2">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
