--- a/templates/chat/char-dialog.html
+++ b/templates/chat/char-dialog.html
@@ -11,12 +11,12 @@
     <label>{{localize "RQG.Difficultymodifier"}}</label>
     <select name="difficultymultiplier">
       {{#select difficultymultiplier}}
-      <option value="0.5">{{localize "RQG.Nearlyimpossible"}}</option>
-      <option value="1">{{localize "RQG.Veryhard"}}</option>
-      <option value="2">{{localize "RQG.Hard"}}</option>
-      <option value="3">{{localize "RQG.Moderate"}}</option>
-      <option value="4">{{localize "RQG.Easy"}}</option>
-      <option value="5">{{localize "RQG.Simpleaction"}}</option>
+      <option value="0.5">{{localize "RQG.Nearlyimpossible"}} - x0.5 </option>
+      <option value="1">{{localize "RQG.Veryhard"}} - x1</option>
+      <option value="2">{{localize "RQG.Hard"}} - x2</option>
+      <option value="3">{{localize "RQG.Moderate"}} - x3</option>
+      <option value="4">{{localize "RQG.Easy"}} - x4</option>
+      <option value="5">{{localize "RQG.Simpleaction"}} - x5</option>
       {{/select}}
     </select>
   </div>
