--- a/templates/actor/parts/actor-summary.html
+++ b/templates/actor/parts/actor-summary.html
@@ -32,9 +32,6 @@
     {{!-- Runes --}}
     <div  class="summary-runes-list flexrow">
         <table>
-            <thead>
-                <th colspan="2"></th>
-            </thead>
             <tbody>
                 {{#each data.elementalrunes as |elementalrune id|}}
                     <tr class="elemental-rune" data-rune="{{id}}">
@@ -58,9 +55,9 @@
 <div class="summary-row flexrow">
     <div class="summary-runes-list flexrow">
         <ol class="skills-list">
-            <table data-attacktype="melee">
+            <table>
                 <thead>
-                    <th>{{localize "RQG.Passions"}}</th>
+                    <th colspan = "3">{{localize "RQG.Passions"}}</th>
                     <th><a class="item-control item-create" title="Create item" data-type="passion"><i class="fas fa-plus"></i></a></th>
                 </thead>
                 <tbody>
@@ -83,8 +80,8 @@
         <ol class="skills-list">
             <table data-attacktype="melee">
                     <thead>
-                        <th>{{localize "RQG.Attack"}}</th>
-                        <th><a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a></th>
+                        <th colspan="8">{{localize "RQG.Attack"}}</th>
+                        <th colspan="2"><a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a></th>
                     </thead>
                     <tbody>
                         <tr class="attack-type-name">
@@ -151,5 +148,89 @@
                 </tbody>
             </table>
         </div>
-    </div>    
+    </div>
+    <!--
+    <div class="summary-runes-list flexrow">
+        <ol class="skills-list">
+            <table data-type="rune">
+                    <thead>
+                        <th colspan="8">{{localize "RQG.Runes"}}</th>
+                        <th colspan="2"><a class="item-control item-create" title="Create item" data-type="rune"><i class="fas fa-plus"></i></a></th>
+                    </thead>
+                    <tbody>
+                        <tr class="attack-type-name">
+                            <td class="attack-type-name" colspan="10">{{localize "RQG.ELEMENTAL"}}</td>                  
+                        </tr>
+                        {{#each data.runes.elemental as |rune id|}}
+                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                            <td class="item-controls" colspan="2">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </td>                        
+                        </tr>
+                        {{/each}}
+                        <tr class="attack-type-name">
+                            <th class="attack-type-name" colspan="10">{{localize "RQG.POWER"}} / {{localize "RQG.FORM"}}</th>                  
+                        </tr>
+                        {{#each data.runes.power as |rune id|}}
+                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                            <td class="item-controls" colspan="2">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </td>                        
+                        </tr>
+                        {{/each}}
+                        <tr class="attack-type-name">
+                            <th class="attack-type-name" colspan="10">{{localize "RQG.FORM"}}</th>                  
+                        </tr>
+                        {{#each data.runes.form as |rune id|}}
+                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                            <td class="item-controls" colspan="2">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </td>                        
+                        </tr>
+                        {{/each}}                       
+                        <tr class="attack-type-name">
+                            <th class="attack-type-name" colspan="10">{{localize "RQG.CONDITION"}}</th>                  
+                        </tr>
+                        {{#each data.runes.condition as |rune id|}}
+                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                            <td class="item-controls" colspan="2">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </td>                        
+                        </tr>
+                        {{/each}}
+                        <tr class="attack-type-name">
+                            <th class="attack-type-name" colspan="10">{{localize "RQG.OTHERS"}}</th>                  
+                        </tr>
+                        {{#each data.runes.others as |rune id|}}
+                        <tr class="item flexrow" data-item-id="{{rune._id}}" data-passionname="{{rune.name}}">
+                            <td class="summary-attack-label"  colspan="5"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.name}}</a></td>
+                            <td class="summary-attack-value" colspan="1"><a class="rune-roll" data-item-id="{{rune._id}}">{{rune.data.data.total}}</a></td>
+                            <td class="item" data-itemid="{{rune._id}}"><input class="rune-experience" id="{{id}}_{{rune._id}}_rune_skill" type="checkbox" name="data.experience" {{checked rune.data.data.experience}}/></td>                         
+                            <td class="item-controls" colspan="2">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </td>                        
+                        </tr>
+                        {{/each}}                                           
+                    </tbody>
+            </table>   
+        </ol>
+    </div>
+    -->          
 </div>
