Added the lock button and implemented different tables for weapon based on the flag locked. To Do: Implement lock in other places.

--- a/templates/chat/attack-card.html
+++ b/templates/chat/attack-card.html
@@ -7,7 +7,7 @@
 
     <div class="card-content">
         {{attack.name}} Roll using {{attack.data.skillused}}<br/>
-        Roll: {{roll.total}} vs {{target}}</br>
+        Roll: [[{{roll.total}}]] vs [[{{target}}]]</br>
         {{result}} <br/>
     </div>
     <div class="card-content">
