--- a/styles/rqg.css
+++ b/styles/rqg.css
@@ -6,23 +6,23 @@
   font-family: RunequestRunes;
   src: url("./fonts/RQ.TTF");
 }
-.worldbuilding .runefont {
+.rqg .runefont {
   font-family: 'RunequestRunes';
 }
-.worldbuilding {
+.rqg {
   /* Sheet Tabs */
   /* Items List */
   /* Attributes */
   font-family: 'Verdana';
 }
-.worldbuilding .window-content {
+.rqg .window-content {
   height: 100%;
   padding: 5px;
   overflow-y: scroll;
   background-image:url("./backgrounds/old-brown-paper-texture-image.jpg");
   background-size: cover;
 }
-.worldbuilding header.sheet-header {
+.rqg header.sheet-header {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -53,90 +53,90 @@ input[type="text"]
   -ms-user-select: text;
   user-select: text;
 }
-.worldbuilding .sheet-header .profile-img {
+.rqg .sheet-header .profile-img {
   flex: 0 0 100px;
   height: 100px;
   margin-right: 10px;
 }
-.worldbuilding .sheet-header .header-fields {
+.rqg .sheet-header .header-fields {
   flex: 1;
   height: 100px;
 }
-.worldbuilding .sheet-header h1.charname {
+.rqg .sheet-header h1.charname {
   height: 50px;
   padding: 0px;
   margin: 5px 0;
   border-bottom: 0;
 }
-.worldbuilding .sheet-header h1.charname input {
+.rqg .sheet-header h1.charname input {
   width: 100%;
   height: 100%;
   margin: 0;
 }
-.worldbuilding .resource {
+.rqg .resource {
   width: 50%;
   height: 40px;
   margin-top: 10px;
   float: left;
   text-align: center;
 }
-.worldbuilding .rqg-general {
+.rqg .rqg-general {
   margin-top: 10px;
   float: left;
   text-align: center;
 }
-.worldbuilding .resource input {
+.rqg .resource input {
   width: 100px;
   height: 28px;
 }
-.worldbuilding .tabs {
+.rqg .tabs {
   height: 40px;
   border-top: 1px solid #AAA;
   border-bottom: 1px solid #AAA;
 }
-.worldbuilding .tabs .item {
+.rqg .tabs .item {
   line-height: 40px;
   font-weight: bold;
   font-size:12px;
 }
-.worldbuilding .tabs .item.active {
+.rqg .tabs .item.active {
   text-decoration: underline;
   text-shadow: none;
 }
-.worldbuilding .sheet-body {
+.rqg .sheet-body {
   overflow: scroll;
 }
-.worldbuilding .sheet-body .tab {
+.rqg .sheet-body .tab {
   height: 100%;
   overflow-y: auto;
 }
-.worldbuilding .editor,
-.worldbuilding .editor-content {
+.rqg .editor,
+.rqg .editor-content {
   height: 400px;
 }
-.worldbuilding .items-list {
+.rqg .items-list {
   list-style: none;
   margin: 7px 0;
   padding: 0;
   overflow-y: auto;
 }
-.worldbuilding .items-list .item {
+.rqg .items-list .item {
   height: 30px;
   line-height: 24px;
   padding: 3px 0;
   border-bottom: 1px solid #BBB;
 }
-.worldbuilding .items-list .item img {
+.rqg .items-list .item img {
   flex: 0 0 24px;
   margin-right: 5px;
 }
-.worldbuilding .items-list .item-name {
+.rqg .items-list .item-name {
   margin: 0;
 }
-.worldbuilding .items-list .item-controls {
+.rqg .items-list .item-controls {
   flex: 0 0 36px;
 }
-.worldbuilding .attributes-header {
+.rqg .attributes-header {
   padding: 5px;
   margin: 5px 0;
   background: rgba(0, 0, 0, 0.05);
@@ -145,18 +145,18 @@ input[type="text"]
   text-align: center;
   font-weight: bold;
 }
-.worldbuilding .attributes-header .attribute-label {
+.rqg .attributes-header .attribute-label {
   flex: 1.5;
 }
-.worldbuilding .attributes-header .attribute-control {
+.rqg .attributes-header .attribute-control {
   flex: 0 0 20px;
 }
-.worldbuilding .attributes-list {
+.rqg .attributes-list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.worldbuilding .attributes-list li > * {
+.rqg .attributes-list li > * {
   margin: 0 3px;
   height: 28px;
   line-height: 24px;
@@ -165,21 +165,21 @@ input[type="text"]
   border-radius: 0;
   border-bottom: 1px solid #AAA;
 }
-.worldbuilding .attributes-list a.attribute-control {
+.rqg .attributes-list a.attribute-control {
   flex: 0 0 20px;
   text-align: center;
   line-height: 28px;
   border: none;
 }
-.worldbuilding.sheet.actor {
+.rqg.sheet.actor {
   min-width: 700px;
   min-height: 500px;
 }
-.worldbuilding.sheet.item {
+.rqg.sheet.item {
   min-width: 460px;
   min-height: 400px;
 }
-.worldbuilding .runequest-roll-button{
+.rqg .runequest-roll-button{
   content: url(../icons/runes/luck.png);
   max-height: 100%;
   max-width: 100%;
@@ -188,7 +188,7 @@ input[type="text"]
   font-size: xx-large;
 }
 
-.worldbuilding .skills-list {
+.rqg .skills-list {
   list-style: none;
   margin: 7px 0;
   padding: 0;
@@ -201,7 +201,7 @@ input[type="text"]
   font-weight: bold;
   width:100%;
 }
-.worldbuilding .summary-second-row {
+.rqg .summary-second-row {
   list-style: none;
   margin: 7px 0;
   padding: 0;
@@ -213,49 +213,49 @@ input[type="text"]
   font-size: 10px;
   font-weight: bold;
 }
-.worldbuilding .skills-list .item {
+.rqg .skills-list .item {
   height: auto;
   line-height: 24px;
   padding: 3px 0;
   border-bottom: 1px solid #BBB;
   justify-content: flex-end;
 }
-.worldbuilding .skills-list .item img {
+.rqg .skills-list .item img {
   flex: 0 0 24px;
   margin-right: 10px;
 }
-.worldbuilding .skills-list .item-name {
+.rqg .skills-list .item-name {
   margin-left: 5px;
   flex: 4 4 100px;
 }
-.worldbuilding .skills-list .attack-type-name {
+.rqg .skills-list .attack-type-name {
   margin-left: 5px;
   text-align: center;
 }
-.worldbuilding .elemental-rune {
+.rqg .elemental-rune {
   margin-left: 5px;
   text-align: center;
 }
-.worldbuilding .skills-list .item-controls {
+.rqg .skills-list .item-controls {
   flex: 0 0 36px;
   margin-left: 5px;
 }
-.worldbuilding .skills-list .skill-value{
+.rqg .skills-list .skill-value{
   flex: 0 0 30px;
   margin-left: 5px;
 }
-.worldbuilding .skills-list .skill-name{
+.rqg .skills-list .skill-name{
   flex: 4 4 100px;
   margin: 35px;
 }
-.worldbuilding .skills-list .skill-category{
+.rqg .skills-list .skill-category{
   max-height: 100%;
   max-width: 100%;
   width: 50%;
   flex: 4 1 250px;
   border-style: double;
 }
-.worldbuilding .characteristics-list {
+.rqg .characteristics-list {
   list-style: none;
   margin: 7px 0;
   padding: 0;
@@ -265,7 +265,7 @@ input[type="text"]
   justify-content: flex-start;
   margin-bottom: 10px;  
 }
-.worldbuilding .characteristics-list li > * {
+.rqg .characteristics-list li > * {
   margin: 0 3px;
   height: 28px;
   line-height: 24px;
@@ -274,7 +274,7 @@ input[type="text"]
   border-radius: 0;
   border-bottom: 1px solid #AAA;
 }
-.worldbuilding .summary-characteristic-list {
+.rqg .summary-characteristic-list {
   /* font-family: AtlantisRegular; */
   list-style: none;
   margin: 0px;
@@ -282,13 +282,13 @@ input[type="text"]
   border: 2px solid rgb(8, 8, 8);
   width:20%;    
 }
-.worldbuilding .summary-characteristics-label {
+.rqg .summary-characteristics-label {
   flex: 2;
 }
-.worldbuilding .summary-characteristics-value {
+.rqg .summary-characteristics-value {
   flex: 1;
 }
-.worldbuilding .summary-characteristics-li {
+.rqg .summary-characteristics-li {
   margin: 0 3px;
   height: 28px;
   width: 100%;
@@ -298,7 +298,7 @@ input[type="text"]
   border-radius: 0;
   border-bottom: 1px solid #AAA;
 }
-.worldbuilding .summary-meleeattack-list {
+.rqg .summary-meleeattack-list {
   /* font-family: AtlantisRegular; */
   font-size:14px;
   list-style: none;
@@ -308,14 +308,14 @@ input[type="text"]
   margin-bottom: 10px;
   border: 2px solid rgb(8, 8, 8);  
 }
-.worldbuilding .summary-meleeattack-list .item {
+.rqg .summary-meleeattack-list .item {
   height: auto;
   line-height: 24px;
   padding: 3px 0;
   border-bottom: 1px solid #BBB;
   justify-content: flex-end;
 }
-.worldbuilding .summary-passions-list {
+.rqg .summary-passions-list {
   /* font-family: AtlantisRegular; */
   font-size:14px;
   list-style: none;
@@ -325,14 +325,14 @@ input[type="text"]
   margin-bottom: 10px;
   border: 2px solid rgb(8, 8, 8);  
 }
-.worldbuilding .summary-passions-list .item {
+.rqg .summary-passions-list .item {
   height: auto;
   line-height: 24px;
   padding: 3px 0;
   border-bottom: 1px solid #BBB;
   justify-content: flex-end;
 }
-.worldbuilding .summary-naturalattack-list {
+.rqg .summary-naturalattack-list {
   /* font-family: AtlantisRegular; */
   font-size:14px;
   list-style: none;
@@ -342,29 +342,29 @@ input[type="text"]
   margin-bottom: 10px;
   border: 2px solid rgb(8, 8, 8);  
 }
-.worldbuilding .summary-naturalattack-list .item {
+.rqg .summary-naturalattack-list .item {
   height: auto;
   line-height: 24px;
   padding: 3px 0;
   border-bottom: 1px solid #BBB;
   justify-content: flex-end;
 }
-.worldbuilding .summary-attack-label {
+.rqg .summary-attack-label {
   flex: 1;
 }
-.worldbuilding .summary-attack-value {
+.rqg .summary-attack-value {
   flex: 1;
 }
-.worldbuilding .summary-attack-damage {
+.rqg .summary-attack-damage {
   flex: 1;
 }
-.worldbuilding .summary-runes-label {
+.rqg .summary-runes-label {
   flex: 2;
 }
-.worldbuilding .summary-runes-value {
+.rqg .summary-runes-value {
   flex: 1;
 }
-.worldbuilding .summary-runes-li {
+.rqg .summary-runes-li {
   margin: 0 3px;
   height: 28px;
   width: 100%;
@@ -374,7 +374,7 @@ input[type="text"]
   border-radius: 0;
   border-bottom: 1px solid #AAA;
 }
-.worldbuilding .summary-runes-list {
+.rqg .summary-runes-list {
   /* font-family: AtlantisRegular; */
   list-style: none;
   margin: 2px;
@@ -382,7 +382,7 @@ input[type="text"]
   border: 2px solid rgb(8, 8, 8);
   flex:1,0,auto;    
 }
-.worldbuilding .summary-hitlocations-list {
+.rqg .summary-hitlocations-list {
   /* font-family: AtlantisRegular; */
   list-style: none;
   margin: 2px;
@@ -390,7 +390,7 @@ input[type="text"]
   border: 2px solid rgb(8, 8, 8);    
   flex:2,0,auto;    
 }
-.worldbuilding .summary-powerrunes-list {
+.rqg .summary-powerrunes-list {
   /* font-family: AtlantisRegular; */
   font-size:14px;
   list-style: none;
@@ -399,7 +399,7 @@ input[type="text"]
   width:50%;
   border: 2px solid rgb(8, 8, 8);    
 }
-.worldbuilding .summary-missileattack-list {
+.rqg .summary-missileattack-list {
   /* font-family: AtlantisRegular; */
   font-size:14px;
   list-style: none;
@@ -409,13 +409,13 @@ input[type="text"]
   margin-bottom: 10px;
   border: 2px solid rgb(8, 8, 8);  
 }
-.worldbuilding .summary-skill-label {
+.rqg .summary-skill-label {
   flex: 2;
 }
-.worldbuilding .summary-skill-value {
+.rqg .summary-skill-value {
   flex: 1;
 }
-.worldbuilding .summary-skill-list {
+.rqg .summary-skill-list {
   /* font-family: AtlantisRegular; */
   font-size:14px;
   list-style: none;
@@ -425,74 +425,74 @@ input[type="text"]
   margin-bottom: 10px;
   border: 2px solid rgb(8, 8, 8);  
 }
-.worldbuilding .summary-skill-list .item {
+.rqg .summary-skill-list .item {
   height: auto;
   line-height: 24px;
   padding: 3px 0;
   border-bottom: 1px solid #BBB;
   justify-content: flex-end;
 }
-.worldbuilding .characteristic-list-table {
+.rqg .characteristic-list-table {
   width: 100%;
   height: 70px;
   border: none;
 }
-.worldbuilding .characteristic-list-thead {
+.rqg .characteristic-list-thead {
   height: 30px;
   text-align: left;
   font-family: 'PT Sans',sans-serif;
   border: none;
 }
-.worldbuilding .characteristic-list-th {
+.rqg .characteristic-list-th {
   height: 30px;
   text-align: left;
   font-family: 'PT Sans',sans-serif;
   border: none;
 }
-.worldbuilding .characteristic-list-td {
+.rqg .characteristic-list-td {
   width: 12.5%;
   border: none;
 }
-.worldbuilding .general-list-table {
+.rqg .general-list-table {
   width: 80%;
   height: 70px;
   border: none;
 }
-.worldbuilding .general-list-thead {
+.rqg .general-list-thead {
   height: 30px;
   text-align: left;
   font-family: 'PT Sans',sans-serif;
   border: none;
 }
-.worldbuilding .general-list-th {
+.rqg .general-list-th {
   height: 30px;
   text-align: left;
   font-family: 'PT Sans',sans-serif;
   border: none;
 }
-.worldbuilding .general-list-td {
+.rqg .general-list-td {
   width: 12.5%;
   border: none;
 }
-.worldbuilding .summary-row {
+.rqg .summary-row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
-.worldbuilding .skill-category-table {
+.rqg .skill-category-table {
   width: 33%;
   border: 2px solid green;
   margin: 0.5em 0.5em;
 }
-.worldbuilding .resource-input {
+.rqg .resource-input {
   width: 40px;
   height: 18px;
 }
-.worldbuilding .runesbanner {
+.rqg .runesbanner {
   font-family: 'RunequestRunes';
 }
-.worldbuilding .section-padding {
+.rqg .section-padding {
   padding: 10px;
 }
 .invisible {
