--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -1,5 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
-
+    {{ log cssClass }}
     {{!-- Sheet Header --}}
     {{> "systems/runequest/templates/actor/parts/actor-sheetheader.html"}}
 
@@ -15,6 +15,13 @@
         <a class="item" data-tab="magic">{{localize 'RQG.Magic'}}</a>
         <a class="item" data-tab="description">{{localize 'RQG.Description'}}</a>
         <a class="item" data-tab="items">{{localize 'RQG.Items'}}</a>
+        {{log data.flags.locked}}
+        {{#if data.flags.locked}}
+            <a class="unlock-character-sheet" title="{{localize 'RQG.UnlockSheet'}}"> <i class="fas fa-lock"></i> </a>
+        {{else}}
+            <a class="unlock-character-sheet" title="{{localize 'RQG.LockSheet'}}"> <i class="fas fa-lock-open"></i></a>
+        {{/if}}
+
     </nav>
 
     {{!-- Sheet Body --}}
