--- a/templates/actor/parts/actor-summary.html
+++ b/templates/actor/parts/actor-summary.html
@@ -57,16 +57,16 @@
         <ol class="skills-list">
             <table>
                 <thead>
-                    <th colspan = "3">{{localize "RQG.Passions"}}</th>
+                    <th colspan = "5">{{localize "RQG.Passions"}}</th>
                     <th><a class="item-control item-create" title="Create item" data-type="passion"><i class="fas fa-plus"></i></a></th>
                 </thead>
                 <tbody>
                     {{#each data.passions as |passion id|}}
                     <tr class="item flexrow" data-item-id="{{passion._id}}" data-passionname="{{passion.name}}">
-                        <td class="summary-attack-label"  colspan="5"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.name}}</a></td>
-                        <td class="summary-attack-value" colspan="1"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.data.data.total}}</a></td>
-                        <td class="item" data-itemid="{{passion._id}}"><input class="passion-experience" id="{{id}}_{{passion._id}}_passion_skill" type="checkbox" name="data.experience" {{checked passion.data.data.experience}}/></td>                         
-                        <td class="item-controls" colspan="2">
+                        <td class="summary-passion-label"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.name}}</a></td>
+                        <td class="summary-passion-value"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.data.data.total}}</a></td>
+                        <td class="item summary-passion-check" data-itemid="{{passion._id}}"><input class="passion-experience" id="{{id}}_{{passion._id}}_passion_skill" type="checkbox" name="data.experience" {{checked passion.data.data.experience}}/></td>                         
+                        <td class="item-controls summary-passion-button">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
                         </td>                        
@@ -75,61 +75,7 @@
                 </tbody>
                 </table>
         </ol>        
-    </div>
-    <div class="summary-runes-list flexrow">
-        <ol class="skills-list">
-            <table data-attacktype="melee">
-                    <thead>
-                        <th colspan="8">{{localize "RQG.Attack"}}</th>
-                        <th colspan="2"><a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a></th>
-                    </thead>
-                    <tbody>
-                        <tr class="attack-type-name">
-                            <td class="attack-type-name" colspan="10">{{localize "RQG.MeleeAttacks"}}</td>                  
-                        </tr>
-                        {{#each data.attacks.melee as |attack id|}}
-                            <tr class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                                <td class="summary-attack-label"  colspan="4"><a class="attack-roll">{{attack.name}}</a></td>
-                                <td class="summary-attack-value" colspan="1">{{attack.data.data.skillvalue}}</td>
-                                <td class="summary-attack-damage" colspan="3">{{attack.data.data.damage}}</td>
-                                <td class="item-controls" colspan="2">
-                                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                                </td>                        
-                            </tr>
-                        {{/each}}
-                        <tr class="attack-type-name">
-                            <th class="attack-type-name" colspan="10">{{localize "RQG.MissileAttacks"}}</th>                  
-                        </tr>
-                        {{#each data.attacks.missile as |attack id|}}
-                            <tr class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                                <td class="summary-attack-label"  colspan="4"><a class="attack-roll">{{attack.name}}</a></td>
-                                <td class="summary-attack-value" colspan="1">{{attack.data.data.skillvalue}}</td>
-                                <td class="summary-attack-damage" colspan="3">{{attack.data.data.damage}}</td>
-                                <td class="item-controls" colspan="2">
-                                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                                </td>                        
-                            </tr>
-                        {{/each}}                         
-                        <tr class="attack-type-name">
-                            <th class="attack-type-name" colspan="10">{{localize "RQG.NaturalAttacks"}}</th>                  
-                        </tr>
-                        {{#each data.attacks.natural as |attack id|}}
-                            <tr class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                                <td class="summary-attack-label"  colspan="4"><a class="attack-roll">{{attack.name}}</a></td>
-                                <td class="summary-attack-value" colspan="1">{{attack.data.data.skillvalue}}</td>
-                                <td class="summary-attack-damage" colspan="3">{{attack.data.data.damage}}</td>
-                                <td class="item-controls" colspan="2">
-                                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                                </td>                        
-                            </tr>
-                        {{/each}}                         
-                    </tbody>
-            </table>   
-        </ol>
-    </div>   
+    </div>  
     <div class="summary-runes-list flexrow">
         <div class="skills-list">
             {{!-- Defense --}}
@@ -234,3 +180,6 @@
     </div>
     -->          
 </div>
+{{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.melee attacktype="melee" attacklabel="RQG.MeleeAttacks"}}
+{{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.missile  attacktype="missile" attacklabel="RQG.MissileAttacks"}}
+{{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.natural attacktype="natural" attacklabel="RQG.NaturalAttacks"}}
