--- a/templates/actor/parts/actor-partial-attacks.html
+++ b/templates/actor/parts/actor-partial-attacks.html
@@ -22,7 +22,7 @@
                 {{else}}
                     <tr class="attack-header">
                         <th>
-                            {{localize "RQG.name"}}
+                            {{localize "RQG.Name"}}
                         </th>
                         <th>
                             {{localize "RQG.SkillUsed"}}
