--- a/templates/actor/parts/actor-combat.html
+++ b/templates/actor/parts/actor-combat.html
@@ -1,142 +1,36 @@
+{{!-- Defenses --}}
+<div class="summary-row flexrow">
+    <div class="summary-runes-list flexrow">
+        <ol class="skills-list">
+            {{!-- Defense --}}
+            <table class="combat-defense-table" border="2">
+                <thead>
+                    <th colspan="{{data.defense.length}}">{{localize "RQG.Defense"}}</th>
+                </thead>
+                <tbody>
+                    <tr>
+                    {{#each data.defense as |item id|}}
+                        <td class="skill summary-skill-roll combat-defense-field" data-itemid="{{item._id}}" data-skillname="{{item.name}}" data-skillcategory="{{item.data.skillcategory}}">
+                            {{item.name}}: {{item.data.data.total}}                     
+                        </td>
+                    {{/each}}
+                    </tr>
+                </tbody>
+            </table>
+        </ol>
+    </div>
+</div>
 {{!-- Hit Locations --}}
 <ol class="skills-list">          
     <div class="skill-category">
-        <li class="item flexrow item-header">
-            <div class="item-name">{{localize "RQG.HitLocations"}}</div>
-            <div class="item-name">
-                {{log "List of Locations Type"}}
-                {{log data.attributes}}
-                <select name="data.attributes.hitlocationstype">
-                    {{#select data.attributes.hitlocationstype}}
-                    {{#each config.hitlocationstypes as |name type|}}
-                    <option value="{{type}}">{{localize name}}</option>
-                    {{/each}}
-                    {{/select}}
-                </select>                  
-            </div>
-            <div class="item-controls">
-                <a class="item-control item-create" title="Create item" data-type="hitlocation"><i class="fas fa-plus"></i></a>
-            </div>
-        </li>
-        {{#each data.hitlocations as |hl id|}}
-            <li class="item flexrow" data-item-id="{{hl._id}}">
-                <h4 class="item-name">{{hl.name}}</h4>
-                <div  class="attribute-editbox">
-                    <!-- <input  class="attribute-value"  type="text"  name="hl.data.hp.value"  value="{{hl.data.hp.value}}"  data-dtype="Number"  /> -->
-                    <input id="{{id}}_{{hl._id}}_currenthp_hitloc" type="text" name="hl.data.data.currenthp" value="{{hl.data.data.currenthp}}" />
-                </div>
-                /
-                <h4 class="item-name">{{hl.data.data.maxhp}}</h4>
-                <div  class="attribute-editbox">
-                    <input  class="attribute-value"  type="text"  name="hl.data.data.armor"  value="{{hl.data.data.armor}}"  data-dtype="Number"  />
-                </div>
-                <div  class="attribute-editbox">
-                    <input  class="attribute-value"  type="text"  name="hl.data.data.wounds"  value="{{hl.data.data.wounds}}"  data-dtype="Number"  />
-                </div>
-                <h4 class="item-name">{{hl.data.data.condition}}</h4>
-                <div class="item-controls">
-                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                </div>
+        {{> "systems/runequest/templates/actor/parts/actor-partial-hitlocations.html"}}
+    </div>
+</ol>
+{{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.melee attacktype="melee" attacklabel="RQG.MeleeAttacks"}}
+{{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.missile  attacktype="missile" attacklabel="RQG.MissileAttacks"}}
+{{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.natural attacktype="natural" attacklabel="RQG.NaturalAttacks"}}
 
-            </li>
-        {{/each}}
-    </div>
-</ol>
-{{!-- Melee Attacks --}}
-<ol class="skills-list">          
-    <div class="skill-category" data-attacktype="melee">
-        <li class="item flexrow item-header">
-            <div class="item-name">{{localize "RQG.MeleeAttacks"}}</div>
-            <div class="item-controls">
-                <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
-            </div>
-        </li>
-        {{#each data.attacks.melee as |attack id|}}
-            <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
-                <h4 class="item-name">{{attack.data.data.skillused}}</h4>
-                <label class="skill-value">{{attack.data.data.modifier}}</label>
-                <h4 class="item-name">{{attack.data.data.damage}}</h4>
-                <h4 class="item-name">{{attack.data.data.hpcurrent}} / {{attack.data.data.hpmax}}</h4>
-                <div class="item-controls">
-                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                </div>
-            </li>
-        {{/each}}
-    </div>
-</ol>
-{{!-- Missile Attacks --}}
-<ol class="skills-list">          
-    <div class="skill-category" data-attacktype="missile">
-        <li class="item flexrow item-header">
-            <div class="item-name">{{localize "RQG.MissileAttacks"}}</div>
-            <div class="item-controls">
-                <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
-            </div>
-        </li>
-        {{#each data.attacks.missile as |attack id|}}
-            <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="missileweapons">
-                <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
-                <h4 class="item-name">{{attack.data.data.skillused}}</h4>
-                <label class="skill-value">{{attack.data.data.modifier}}</label>
-                <h4 class="item-name">{{attack.data.data.damage}}</h4>
-                <h4 class="item-name">{{attack.data.data.hpcurrent}} / {{attack.data.data.hpmax}}</h4>
-                <div class="item-controls">
-                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                </div>
-            </li>
-        {{/each}}
-    </div>
-</ol>
-{{!-- Natural Attacks --}}
-<ol class="skills-list">          
-    <div class="skill-category" data-attacktype="natural">
-        <li class="item flexrow item-header">
-            <div class="item-name">{{localize "RQG.NaturalAttacks"}}</div>
-            <div class="item-controls">
-                <a class="item-control item-create" title="Create item" data-type="attack"><i class="fas fa-plus"></i></a>
-            </div>
-        </li>
-        {{#each data.attacks.natural as |attack id|}}
-            <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                <h4 class="item-name"><a class="attack-roll">{{attack.name}}</a></h4>
-                <h4 class="item-name">{{attack.data.data.skillused}}</h4>
-                <label class="skill-value">{{attack.data.data.modifier}}</label>
-                <h4 class="item-name">{{attack.data.data.damage}}</h4>
-                <h4 class="item-name">{{attack.data.data.hpcurrent}} / {{attack.data.data.hpmax}}</h4>
-                <div class="item-controls">
-                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                </div>
-            </li>
-        {{/each}}
-    </div>
-</ol>
 {{!-- Armors --}}
-<ol class="skills-list">          
-    <div class="skill-category">
-        <li class="item flexrow item-header">
-            <div class="item-name">{{localize "RQG.Armors"}}</div>
-            <div class="item-controls">
-                <a class="item-control item-create" title="Create item" data-type="armor"><i class="fas fa-plus"></i></a>
-            </div>
-        </li>
-        {{#each data.armors as |armor id|}}
-            <li class="item flexrow" data-item-id="{{attack._id}}" data-attackname="{{attack.name}}" data-skillcategory="meleeweapons">
-                <h4 class="item-name">{{armor.name}}</h4>
-                <h4 class="item-name">{{armor.data.data.ap}}</h4>
-                <label class="skill-value">{{attack.data.data.currentap}}</label>
-                <h4 class="item-name">{{attack.data.data.armorpenalty}}</h4>
-                <div class="item-controls">
-                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                </div>
-            </li>
-        {{/each}}
-    </div>
-</ol>
+{{> "systems/runequest/templates/actor/parts/actor-partial-armors.html"}}
 
 
