--- a/templates/actor/parts/actor-sheetheader.html
+++ b/templates/actor/parts/actor-sheetheader.html
@@ -1,7 +1,5 @@
     <header class="sheet-header section-padding">
-        {{log "Actor Sheet starting with actor:"}}
-        {{log actor}}
-        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
+        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="150" width="150"/>
         <div class="header-fields">
             <div class="summary-general-list">
                 <table class="general-list-table">
@@ -9,46 +7,29 @@
                         <tr>
                         <td class="general-list-td" colspan="14">Name:<input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></td>
                         </tr>
+                        {{> "systems/runequest/templates/actor/parts/actor-partial-characteristics.html"}}
                         <tr>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="strength" colspan="2">{{localize "RQG.STR"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="constitution" colspan="2">{{localize "RQG.CON"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="size" colspan="2">{{localize "RQG.SIZ"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="dexterity" colspan="2">{{localize "RQG.DEX"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="intelligence" colspan="2">{{localize "RQG.INT"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="power" colspan="2">{{localize "RQG.POW"}}</td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="charisma" colspan="2">{{localize "RQG.CHA"}}</td>
+                            <td class="characteristic-list-td" colspan="2">Damage Bonus: {{actor.data.data.attributes.damagebonus}}</td>
+                            <td class="characteristic-list-td" colspan="1">SIZ SR: {{actor.data.data.attributes.sizsr}}</td>
+                            <td class="characteristic-list-td" colspan="2">DEX SR: {{actor.data.data.attributes.dexsr}}</td>
+                            <td class="characteristic-list-td" colspan="2">Healing Rate: {{actor.data.data.attributes.healingrate}}</td>
                         </tr>
                         <tr>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="strength" colspan="2"><a class="summary-characteristic-roll">{{actor.data.data.characteristics.strength.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="constitution" colspan="2"><a class="summary-characteristic-roll">{{actor.data.data.characteristics.constitution.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="size" colspan="2"><a class="summary-characteristic-roll">{{actor.data.data.characteristics.size.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="dexterity" colspan="2"><a class="summary-characteristic-roll">{{actor.data.data.characteristics.dexterity.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="intelligence" colspan="2"><a class="summary-characteristic-roll">{{actor.data.data.characteristics.intelligence.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="power" colspan="2"><a class="summary-characteristic-roll">{{actor.data.data.characteristics.power.value}}</a></td>
-                            <td class="characteristic-list-td characteristic" data-characteristic-id="charisma" colspan="2"><a class="summary-characteristic-roll">{{actor.data.data.characteristics.charisma.value}}</a></td>
-                        </tr>
-                        <tr>
-                            <td class="characteristic-list-td" colspan="4">Damage Bonus: {{actor.data.data.attributes.damagebonus}}</td>
-                            <td class="characteristic-list-td" colspan="3">SIZ SR: {{actor.data.data.attributes.sizsr}}</td>
-                            <td class="characteristic-list-td" colspan="3">DEX SR: {{actor.data.data.attributes.dexsr}}</td>
-                            <td class="characteristic-list-td" colspan="4">Healing Rate: {{actor.data.data.attributes.healingrate}}</td>
-                        </tr>
-                        <tr>
-                            <td class="characteristic-list-td" colspan="5">
+                            <td class="characteristic-list-td" colspan="2">
                                 <div>
                                     {{localize 'RQG.HP'}}: <input class="resource-input" type="text" name="data.attributes.hitpoints.value" value="{{actor.data.data.attributes.hitpoints.value}}" data-dtype="Number"/>
                                     /
                                     {{actor.data.data.attributes.hitpoints.max}}
                                 </div>
                             </td>                         
-                            <td class="characteristic-list-td" colspan="4">
+                            <td class="characteristic-list-td" colspan="2">
                                 <div>
                                     {{localize 'RQG.MP'}}: <input class="resource-input" type="text" name="data.attributes.magicpoints.value" value="{{actor.data.data.attributes.magicpoints.value}}" data-dtype="Number"/>
                                     /
                                     {{actor.data.data.attributes.magicpoints.max}}
                                 </div>
                             </td>
-                            <td class="characteristic-list-td" colspan="5">
+                            <td class="characteristic-list-td" colspan="3">
                                 <div>
                                     {{localize 'RQG.MPSTORAGE'}}: <input class="resource-input" type="text" name="data.attributes.magicpointsreserve.value" value="{{actor.data.data.attributes.magicpointsreserve.value}}" data-dtype="Number"/>
                                     /
