--- a/templates/actor/parts/actor-sheetheader.html
+++ b/templates/actor/parts/actor-sheetheader.html
@@ -1,6 +1,6 @@
     <header class="sheet-header section-padding">
-        <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="150" width="150"/>
-        <div class="header-fields">
+        <img class="character-profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="150" width="150"/>
+        <div class="character-header-fields">
             <div class="summary-general-list">
                 <table class="general-list-table">
                     <tbody>
